third_party/WebKit/Source/core/svg/graphics/SVGImageForContainer.h
@@ -84,6 +84,14 @@ class SVGImageForContainer final : public Image {
             ImageClampingMode,
             const ColorBehavior&) override;
 
+  // FIXME: Implement this to be less conservative.
+  bool currentFrameKnownToBeOpaque(MetadataMode = UseCurrentMetadata) override {
+    return false;
+  }
+
+  sk_sp<SkImage> imageForCurrentFrame(const ColorBehavior&) override;
+
+ protected:
   void drawPattern(GraphicsContext&,
                    const FloatRect&,
                    const FloatSize&,
@@ -91,13 +99,6 @@ class SVGImageForContainer final : public Image {
                    SkBlendMode,
                    const FloatRect&,
                    const FloatSize& repeatSpacing) override;
-
-  // FIXME: Implement this to be less conservative.
-  bool currentFrameKnownToBeOpaque(MetadataMode = UseCurrentMetadata) override {
-    return false;
-  }
-
-  sk_sp<SkImage> imageForCurrentFrame(const ColorBehavior&) override;
 
  private:
   SVGImageForContainer(SVGImage* image,
